src-ken&y/objects/Customer_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Total_Number_Of_Lines__c</fullName>
        <description>Total Number of lines for this record.</description>
        <inlineHelpText>Total Number of lines for this record.</inlineHelpText>
        <label>Total Number Of Lines</label>
        <summaryForeignKey>Customer_Invoice_Line__c.Customer_Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Tax__c</fullName>
        <label>Sales Tax Amount</label>
        <summarizedField>Customer_Invoice_Line__c.Sales_Tax__c</summarizedField>
        <summaryForeignKey>Customer_Invoice_Line__c.Customer_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_Added_Tax__c</fullName>
        <label>VAT Amount</label>
        <summarizedField>Customer_Invoice_Line__c.Value_Added_Tax__c</summarizedField>
        <summaryForeignKey>Customer_Invoice_Line__c.Customer_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking_Code__c</fullName>
        <description>If there is a tracking URL in the shipping method, you can combine this field and the tracking URL to track the shipment</description>
        <inlineHelpText>If there is a tracking URL in the shipping method, you can combine this field and the tracking URL to track the shipment.</inlineHelpText>
        <label>Tracking Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <inlineHelpText>Date of the transaction. Can be populated from any source using a workflow.</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Accounting process uses this field as one of the criteria to determine the accounting rule to be used to book this transaction.</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unearned_Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unearned discount amount entered manually by user on Visualforce Page CustomerPaymentPage. (Do not use on Page Layout)</description>
        <inlineHelpText>Unearned discount amount</inlineHelpText>
        <label>DEPRECATED</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Write_Off_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Input field on Visualforce Page CustomerPaymentPage.(Do not use on Page Layout)</description>
        <label>Write Off Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Customer Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bill_To_Customer__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Currency__c</columns>
        <columns>Balance__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cancelled_not_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) == &apos;Cancelled&apos; &amp;&amp; Finalized__c</errorConditionFormula>
        <errorDisplayField>Finalized__c</errorDisplayField>
        <errorMessage>You cannot Finalize a Customer Invoice that has been cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Unfinalize_paid_invoices</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Finalized__c ) &amp;&amp; Finalized__c == false &amp;&amp;  Balance__c !=  Total_Amount__c &amp;&amp; NOT( ISPICKVAL( Status__c , &quot;Cancelled&quot;) ) &amp;&amp; NOT( ISPICKVAL( Status__c , &quot;Void&quot;) )</errorConditionFormula>
        <errorDisplayField>Finalized__c</errorDisplayField>
        <errorMessage>Cannot unfinalize an invoice if it is partially/fully paid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Receipt_Does_Not_Match</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK(Customer_Receipt_Line__c) ) ,Customer_Receipt_Line__r.Customer_Receipt__c !=  Customer_Receipt__c)</errorConditionFormula>
        <errorDisplayField>Customer_Receipt_Line__c</errorDisplayField>
        <errorMessage>The Receipt Line must be a child of Customer Invoice -&gt; Customer Receipt</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freeze_Due_Date_validation</fullName>
        <active>true</active>
        <description>If the Freeze Due Date is set, the Due date on the customer invoice cannot be changed</description>
        <errorConditionFormula>(Freeze_Due_Date__c &amp;&amp; ISCHANGED(Due_Date__c))</errorConditionFormula>
        <errorMessage>You cannot change the Due Date as it is frozen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manual_invoice_cant_link_to_sales_order</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Invoice_Type__c , &quot;Manual&quot;) &amp;&amp; NOT(ISBLANK( Sales_Order__c ))</errorConditionFormula>
        <errorDisplayField>Sales_Order__c</errorDisplayField>
        <errorMessage>Manual invoice cannot be linked to a sales order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Terms</fullName>
        <active>true</active>
        <description>Checks to make sure that payment terns are filled out when status is &quot;invoiced&quot;.</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;Invoiced&quot;)  &amp;&amp;  ISBLANK(Payment_Term__c)</errorConditionFormula>
        <errorMessage>Enter Payment Terms on Sales Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Balance_based_on_Total_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(Total_Amount__c&gt;0,Balance__c&lt;0),
 AND(Total_Amount__c&lt;0,Balance__c&gt;0))</errorConditionFormula>
        <errorMessage>You cannot apply more than the invoice balance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ship_Date_for_Shipped_status</fullName>
        <active>true</active>
        <description>Ship date should be entered for shipments having status as shipped</description>
        <errorConditionFormula>IF(ISPICKVAL( Status__c , &apos;shipped&apos;) &amp;&amp;  ISBLANK(Ship_Date__c)  , true, false)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please enter a ship date</errorMessage>
    </validationRules>
</CustomObject>